force-app/main/default/objects/cache_case__x/cache_case__x.object-meta.xml
<CustomObject>
    <description>cache$case</description>
    <externalDataSource>Heroku_Archive</externalDataSource>
    <externalName>cache$case</externalName>
    <label>Archived Case</label>
    <pluralLabel>cache$case</pluralLabel>
</CustomObject>