force-app/main/default/objects/cache_case__x/fields/accountid__c.field-meta.xml
<CustomField>
    <fullName>accountid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>accountid</description>
    <externalDeveloperName>accountid</externalDeveloperName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Archived Cases</relationshipLabel>
    <relationshipName>cache_case</relationshipName>
    <type>Lookup</type>
</CustomField>