force-app/main/default/objects/cache_case__x/fields/archived_record_file_reference_c__c.field-meta.xml
<CustomField>
    <fullName>archived_record_file_reference_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>archived_record_file_reference__c</description>
    <externalDeveloperName>archived_record_file_reference__c</externalDeveloperName>
    <label>Archived File Link</label>
    <referenceTo>Archived_Record_File_Reference__c</referenceTo>
    <relationshipLabel>Archived Case Record</relationshipLabel>
    <relationshipName>cache_case</relationshipName>
    <type>Lookup</type>
</CustomField>