force-app/main/default/objects/cache_case__x/fields/closeddate__c.field-meta.xml
<CustomField>
    <fullName>closeddate__c</fullName>
    <description>closeddate</description>
    <externalDeveloperName>closeddate</externalDeveloperName>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>