force-app/main/default/objects/cache_case__x/fields/comments__c.field-meta.xml
<CustomField>
    <fullName>comments__c</fullName>
    <description>comments</description>
    <externalDeveloperName>comments</externalDeveloperName>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>