force-app/main/default/objects/cache_case__x/fields/contactemail__c.field-meta.xml
<CustomField>
    <fullName>contactemail__c</fullName>
    <description>contactemail</description>
    <externalDeveloperName>contactemail</externalDeveloperName>
    <label>Contact Email</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>