force-app/main/default/objects/cache_case__x/fields/contactfax__c.field-meta.xml
<CustomField>
    <fullName>contactfax__c</fullName>
    <description>contactfax</description>
    <externalDeveloperName>contactfax</externalDeveloperName>
    <label>Contact Fax</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>