force-app/main/default/objects/cache_case__x/fields/contactid__c.field-meta.xml
<CustomField>
    <fullName>contactid__c</fullName>
    <description>contactid</description>
    <externalDeveloperName>contactid</externalDeveloperName>
    <label>Contact</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>