force-app/main/default/objects/cache_case__x/fields/contactmobile__c.field-meta.xml
<CustomField>
    <fullName>contactmobile__c</fullName>
    <description>contactmobile</description>
    <externalDeveloperName>contactmobile</externalDeveloperName>
    <label>Contact Mobile</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>