force-app/main/default/objects/cache_case__x/fields/contactphone__c.field-meta.xml
<CustomField>
    <fullName>contactphone__c</fullName>
    <description>contactphone</description>
    <externalDeveloperName>contactphone</externalDeveloperName>
    <label>Contact Phone</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>