force-app/main/default/objects/cache_case__x/fields/createdbyid__c.field-meta.xml
<CustomField>
    <fullName>createdbyid__c</fullName>
    <description>createdbyid</description>
    <externalDeveloperName>createdbyid</externalDeveloperName>
    <label>Created By</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>