force-app/main/default/objects/cache_case__x/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <description>description</description>
    <externalDeveloperName>description</externalDeveloperName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>