force-app/main/default/objects/cache_case__x/fields/execution_id__c.field-meta.xml
<CustomField>
    <fullName>execution_id__c</fullName>
    <description>__execution_id</description>
    <externalDeveloperName>__execution_id</externalDeveloperName>
    <label>__execution_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>