force-app/main/default/objects/cache_case__x/fields/isclosed__c.field-meta.xml
<CustomField>
    <fullName>isclosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>isclosed</description>
    <externalDeveloperName>isclosed</externalDeveloperName>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>