force-app/main/default/objects/cache_case__x/fields/isdeleted__c.field-meta.xml
<CustomField>
    <fullName>isdeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>isdeleted</description>
    <externalDeveloperName>isdeleted</externalDeveloperName>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>