force-app/main/default/objects/cache_case__x/fields/isescalated__c.field-meta.xml
<CustomField>
    <fullName>isescalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>isescalated</description>
    <externalDeveloperName>isescalated</externalDeveloperName>
    <label>Is Escalated</label>
    <type>Checkbox</type>
</CustomField>