force-app/main/default/objects/cache_case__x/fields/lastmodifiedbyid__c.field-meta.xml
<CustomField>
    <fullName>lastmodifiedbyid__c</fullName>
    <description>lastmodifiedbyid</description>
    <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
    <label>Last Modified By</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>