force-app/main/default/objects/cache_case__x/fields/masterrecordid__c.field-meta.xml
<CustomField>
    <fullName>masterrecordid__c</fullName>
    <description>masterrecordid</description>
    <externalDeveloperName>masterrecordid</externalDeveloperName>
    <label>Master Record Id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>