force-app/main/default/objects/cache_case__x/fields/object_hash__c.field-meta.xml
<CustomField>
    <fullName>object_hash__c</fullName>
    <description>__object_hash</description>
    <externalDeveloperName>__object_hash</externalDeveloperName>
    <label>__object_hash</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>