force-app/main/default/objects/cache_case__x/fields/origin__c.field-meta.xml
<CustomField>
    <fullName>origin__c</fullName>
    <description>origin</description>
    <externalDeveloperName>origin</externalDeveloperName>
    <label>Origin</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>