force-app/main/default/objects/cache_case__x/fields/ownerid__c.field-meta.xml
<CustomField>
    <fullName>ownerid__c</fullName>
    <description>ownerid</description>
    <externalDeveloperName>ownerid</externalDeveloperName>
    <label>Owner</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>