force-app/main/default/objects/cache_case__x/fields/parentid__c.field-meta.xml
<CustomField>
    <fullName>parentid__c</fullName>
    <description>parentid</description>
    <externalDeveloperName>parentid</externalDeveloperName>
    <label>Parent ID</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>