force-app/main/default/objects/cache_case__x/fields/priority__c.field-meta.xml
<CustomField>
    <fullName>priority__c</fullName>
    <description>priority</description>
    <externalDeveloperName>priority</externalDeveloperName>
    <label>Priority</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>