force-app/main/default/objects/cache_case__x/fields/reason__c.field-meta.xml
<CustomField>
    <fullName>reason__c</fullName>
    <description>reason</description>
    <externalDeveloperName>reason</externalDeveloperName>
    <label>Reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>