force-app/main/default/objects/cache_case__x/fields/sfid__c.field-meta.xml
<CustomField>
    <fullName>sfid__c</fullName>
    <description>sfid</description>
    <externalDeveloperName>sfid</externalDeveloperName>
    <label>Salesforce Id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>