force-app/main/default/objects/cache_case__x/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <description>__state</description>
    <externalDeveloperName>__state</externalDeveloperName>
    <label>__state</label>
    <length>1</length>
    <type>Text</type>
</CustomField>