force-app/main/default/objects/cache_case__x/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <description>subject</description>
    <externalDeveloperName>subject</externalDeveloperName>
    <label>Subject</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>