force-app/main/default/objects/cache_case__x/fields/suppliedcompany__c.field-meta.xml
<CustomField>
    <fullName>suppliedcompany__c</fullName>
    <description>suppliedcompany</description>
    <externalDeveloperName>suppliedcompany</externalDeveloperName>
    <label>Supplied Company</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>