force-app/main/default/objects/cache_case__x/fields/suppliedemail__c.field-meta.xml
<CustomField>
    <fullName>suppliedemail__c</fullName>
    <description>suppliedemail</description>
    <externalDeveloperName>suppliedemail</externalDeveloperName>
    <label>Supplied Email</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>