force-app/main/default/objects/cache_case__x/fields/suppliedname__c.field-meta.xml
<CustomField>
    <fullName>suppliedname__c</fullName>
    <description>suppliedname</description>
    <externalDeveloperName>suppliedname</externalDeveloperName>
    <label>Supplied Name</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>