force-app/main/default/objects/cache_case__x/fields/suppliedphone__c.field-meta.xml
<CustomField>
    <fullName>suppliedphone__c</fullName>
    <description>suppliedphone</description>
    <externalDeveloperName>suppliedphone</externalDeveloperName>
    <label>Supplied Phone</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>